--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
-  "name": "TG File Share/Sharing Bot",
-  "description": "file sharing bot store posts and it can access by special links",
+  "name": "Perfect_Nun",
+  "description": "Sangat Menggoda Iman",
   "keywords": [
-    "telegram",
-    "file",
-    "sharing"
+    "perfect",
+    "nun"
   ],
-  "repository": "https://github.com/CodeXBotz/File-Sharing-Bot",
-  "logo": "https://telegra.ph/file/14d3013fda21281c54b61.jpg",
+  "repository": "https://github.com/NiiHen/perfect_nun",
+  "logo": "https://telegra.ph/file/8a4ba160e3f24bf73e363.jpg",
   "env": {
     "TG_BOT_TOKEN": {
       "description": "Your Bot token, Get it from @Botfather",
@@ -15,7 +14,7 @@
     },
     "OWNER_ID": {
       "description": "An integer of consisting of your owner ID",
-      "value": "1250450587"
+      "value": "619499930"
     },
     "APP_ID":{
       "description": "your app id, take it from my.telegram.org",
